--- a/about_us.html
+++ b/about_us.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-     <!-- Header start -->
+    <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -34,8 +34,8 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                            loading="lazy" class="img-fluid"></a>
+                    <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                            alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
                     <ul class="nav">
@@ -74,20 +74,20 @@
                                                         Board Game</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Musical Toy</a>
+                                                    <a class="dropdown-item" href="all_product.html">Musical Toy</a>
                                                 </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
+                                            </td> -->
+                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
                                                         Puzzle Game </a>
                                                 </li>
                                             </td>
+                                        </tr>
+                                        <!-- <tr>
+                                           
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
@@ -95,7 +95,7 @@
                                                     </a>
                                                 </li>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <tr>
                                             <td class="p-0">
                                                 <li>
@@ -118,12 +118,11 @@
                                                         Baby Toy</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Outdoor Toy</a>
+                                                    <a class="dropdown-item" href="all_product.html">Outdoor Toy</a>
                                                 </li>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
@@ -180,8 +179,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                        loading="lazy" class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                        alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -206,8 +205,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                        loading="lazy" class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                        alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
@@ -226,13 +225,13 @@
                 <li><a href="toys-games.html#v-pills-home">Educational Toy</a> </li>
                 <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings0">Board Game</a></li>
-                <li><a href="all_product.html">Musical Toy</a></li>
+                <!-- <li><a href="all_product.html">Musical Toy</a></li> -->
                 <li><a href="all_product.html">Puzzle Game</a></li>
-                <li><a href="all_product.html">Building Blocks</a></li>
+                <!-- <li><a href="all_product.html">Building Blocks</a></li> -->
                 <li><a href="toys-games.html#v-pills-settings6">Sports Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings7">Creative Toy</a></li>
                 <li><a href="all_product.html">Baby Toy</a></li>
-                <li><a href="all_product.html">Outdoor Toy</a></li>
+                <!-- <li><a href="all_product.html">Outdoor Toy</a></li> -->
             </ul>
         </div>
     </div>
@@ -244,10 +243,10 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/img/banner_1.jpeg" class="d-block w-100" alt="banner_1"  loading="lazy">
+                    <img src="./assets/img/banner_1.jpeg" class="d-block w-100" alt="banner_1" loading="lazy">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/banner_2.jpeg" class="d-block w-100" alt="banner_2"  loading="lazy">
+                    <img src="./assets/img/banner_2.jpeg" class="d-block w-100" alt="banner_2" loading="lazy">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -271,13 +270,18 @@
                 <div class="col-md-12">
                     <h2 class="text-center">About Us</h2>
                     <h4><i>Bringing Joy, One Toy at a Time</i></h4>
-                    <i>Welcome to <b>Shilpra Play House </b>, where imagination comes to life! We're more than just a toy
+                    <i>Welcome to <b>Shilpra Play House </b>, where imagination comes to life! We're more than just a
+                        toy
                         store — we're a place where childhood dreams take shape, giggles are shared, and every toy tells
-                        a story. </i> 
-                        <h4 class="mt-4"><i>Who We Are</i></h4>
-                    <i>We’re a team of passionate parents, educators, and dreamers on a mission to create and curate toys that spark creativity, build skills, and bring smiles to little faces. With a deep understanding of child development, we believe that play is the most powerful way for children to learn and grow.</i> 
+                        a story. </i>
+                    <h4 class="mt-4"><i>Who We Are</i></h4>
+                    <i>We’re a team of passionate parents, educators, and dreamers on a mission to create and curate
+                        toys that spark creativity, build skills, and bring smiles to little faces. With a deep
+                        understanding of child development, we believe that play is the most powerful way for children
+                        to learn and grow.</i>
                     <h4 class="mt-4"><i>What We Offer</i></h4>
-                    <i>From educational puzzles and wooden classics to cuddly soft toys and innovative STEM kits, every product we offer is carefully selected for its quality, safety, and ability to inspire.</i>
+                    <i>From educational puzzles and wooden classics to cuddly soft toys and innovative STEM kits, every
+                        product we offer is carefully selected for its quality, safety, and ability to inspire.</i>
                     <ul>
                         <li> 100% child-safe materials</li>
                         <li> Fun + learning in every toy</li>
@@ -285,28 +289,32 @@
                         <li> Loved by kids, trusted by parents</li>
                     </ul>
                     <h4 class="mt-4"><i>Why Choose Us?</i></h4>
-                    <i>We care about what goes into your child’s hands. Our toys are handpicked not just to entertain, but to nurture essential life skills — from problem-solving and communication to creativity and confidence.</i>
+                    <i>We care about what goes into your child’s hands. Our toys are handpicked not just to entertain,
+                        but to nurture essential life skills — from problem-solving and communication to creativity and
+                        confidence.</i>
                     <i>With every toy we deliver, we hope to add a little more wonder to your child’s world.</i>
-                     <h4 class="mt-4"><i>Our Promise</i></h4>
-                    <i>We’re committed to quality, safety, and smiles. Whether you're shopping for a birthday, a learning milestone, or just a reason to play — we're here to help you make it magical.</i>
+                    <h4 class="mt-4"><i>Our Promise</i></h4>
+                    <i>We’re committed to quality, safety, and smiles. Whether you're shoopping  for a birthday, a
+                        learning milestone, or just a reason to play — we're here to help you make it magical.</i>
                 </div>
             </div>
         </div>
     </section>
     <!-- About Us end -->
 
-       <!-- footer start -->
+    <!-- footer start -->
     <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                                loading="lazy" class="img-fluid pb-4"></a>
+                        <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png"
+                                style="max-width: 150px;" alt="Shipra Play House Logo" loading="lazy"
+                                class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience and affordability.
+                        a seamless shoopping  experience and affordability.
                     </p>
                 </div>
                 <div class="col-lg-4 ms-auto col-md-5">
@@ -326,7 +334,7 @@
 
                                     <li><a href="toys-games.html#v-pills-settings0"> Board Game</a></li>
 
-                                    <li> <a href="all_product.html">Musical Toy</a> </li>
+                                    <!-- <li> <a href="all_product.html">Musical Toy</a> </li> -->
 
                                     <li> <a href="all_product.html"> Puzzle Game </a> </li>
 
@@ -335,7 +343,7 @@
                         </div>
                         <div class="col-md-5 pt-3  col-6">
                             <ul class="list-unstyled">
-                                <li> <a href="all_product.html"> Building Blocks </a> </li>
+                                <!-- <li> <a href="all_product.html"> Building Blocks </a> </li> -->
 
                                 <li><a href="toys-games.html#v-pills-settings6"> Sports Toy </a> </li>
 
@@ -343,7 +351,7 @@
 
                                 <li> <a href="all_product.html"> Baby Toy</a></li>
 
-                                <li> <a href="all_product.html">Outdoor Toy</a> </li>
+                                <!-- <li> <a href="all_product.html">Outdoor Toy</a> </li> -->
                             </ul>
                         </div>
                     </div>
@@ -406,11 +414,11 @@
                 </div>
                 <div class="col-auto">
 
-                    <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                    <i class="text-center text-light"><b>This website is owned and operated by shoopping Crafts</b></i>
                 </div>
                 <div class="col-auto">
 
-                    <a href="shipping_delivery.html">Shipping & Delivery Policy</a>
+                    <a href="shipping_delivery.html">Shoopping & Delivery Policy</a>
                 </div>
                 <div class="col-auto">
 
@@ -423,7 +431,7 @@
     <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
-        <script src="./assets/js/search.js"></script>
+    <script src="./assets/js/search.js"></script>
 
 
 </body>
