--- a/corporate_gifts.html
+++ b/corporate_gifts.html
@@ -74,20 +74,21 @@
                                                         Board Game</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item"
-                                                        href="toys-games.html#v-pills-settings1">Musical Toy</a>
-                                                </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
+                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="toys-games.html#v-pills-settings2">
                                                         Puzzle Game </a>
                                                 </li>
                                             </td>
+                                            <!-- <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-settings1">Musical Toy</a>
+                                                </li>
+                                            </td> -->
+                                        </tr>
+                                        <!-- <tr>
+                                           
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="toys-games.html#v-pills-settings3">
@@ -95,7 +96,7 @@
                                                     </a>
                                                 </li>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <tr>
                                             <td class="p-0">
                                                 <li>
@@ -118,12 +119,12 @@
                                                         Baby Toy</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item"
                                                         href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
                                                 </li>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
@@ -198,7 +199,7 @@
                     </a>
                 </li>
                 <li><a href="toys-games.html">Products</a></li>
-                <li><a href="toys-games.html#v-pills-settings4">Birthday Gifts</a></li>
+                <!-- <li><a href="toys-games.html#v-pills-settings4">Birthday Gifts</a></li> -->
                 <li><a href="toys-games.html#v-pills-settings5">Corporate Gifts</a></li>
             </ul>
         </div>
@@ -226,13 +227,13 @@
                 <li><a href="toys-games.html#v-pills-home">Educational Toy</a> </li>
                 <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings0">Board Game</a></li>
-                <li><a href="toys-games.html#v-pills-settings1">Musical Toy</a></li>
+                <!-- <li><a href="toys-games.html#v-pills-settings1">Musical Toy</a></li> -->
                 <li><a href="toys-games.html#v-pills-settings2">Puzzle Game</a></li>
-                <li><a href="toys-games.html#v-pills-settings3">Building Blocks</a></li>
+                <!-- <li><a href="toys-games.html#v-pills-settings3">Building Blocks</a></li> -->
                 <li><a href="toys-games.html#v-pills-settings6">Sports Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings7">Creative Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings8">Baby Toy</a></li>
-                <li><a href="toys-games.html#v-pills-settings9">Outdoor Toy</a></li>
+                <!-- <li><a href="toys-games.html#v-pills-settings9">Outdoor Toy</a></li> -->
             </ul>
         </div>
     </div>
@@ -459,7 +460,7 @@
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience and affordability.
+                        a seamless shoopping experience and affordability.
                     </p>
                 </div>
                 <div class="col-lg-4 ms-auto col-md-5">
@@ -479,7 +480,7 @@
 
                                     <li><a href="toys-games.html#v-pills-settings0"> Board Game</a></li>
 
-                                    <li> <a href="toys-games.html#v-pills-settings1">Musical Toy</a> </li>
+                                    <!-- <li> <a href="toys-games.html#v-pills-settings1">Musical Toy</a> </li> -->
 
                                     <li> <a href="toys-games.html#v-pills-settings2"> Puzzle Game </a> </li>
 
@@ -488,7 +489,7 @@
                         </div>
                         <div class="col-md-5 pt-3  col-6">
                             <ul class="list-unstyled">
-                                <li> <a href="toys-games.html#v-pills-settings3"> Building Blocks </a> </li>
+                                <!-- <li> <a href="toys-games.html#v-pills-settings3"> Building Blocks </a> </li> -->
 
                                 <li><a href="toys-games.html#v-pills-settings6"> Sports Toy </a> </li>
 
@@ -496,7 +497,7 @@
 
                                 <li> <a href="toys-games.html#v-pills-settings8"> Baby Toy</a></li>
 
-                                <li> <a href="toys-games.html#v-pills-settings9">Outdoor Toy</a> </li>
+                                <!-- <li> <a href="toys-games.html#v-pills-settings9">Outdoor Toy</a> </li> -->
                             </ul>
                         </div>
                     </div>
@@ -549,7 +550,7 @@
 
                 </div>
                 <hr class="text-light">
-                <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                <i class="text-center text-light"><b>This website is owned and operated by ShooppingCrafts</b></i>
             </div>
         </div>
         </div>
