--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Shipra Play House | Toys, Games & Learning Tool for Kids Online</title>
     <meta name="description"
         content="Shop quality toys, games, and home essentials at Shipra Play House. Discover educational, musical, sports toys & more at affordable prices online!">
+    <meta name="keywords"
+        content="toys, learning games, kids play, educational toys, musical toys, sports toys, kids home essentials">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Shipra Play House">
+    <meta name="publisher" content="Shipra Play House">
+    <link rel="canonical" href="https://shipraplayhouse.com/">
     <link rel="shortcut icon" href="./assets/img/Shipra Play House Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -76,19 +82,20 @@
                                                         Board Game</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">Musical Toy</a>
                                                 </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
+                                            </td> -->
+                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
                                                         Puzzle Game </a>
                                                 </li>
                                             </td>
+                                        </tr>
+                                        <!-- <tr>
+                                           
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
@@ -96,7 +103,7 @@
                                                     </a>
                                                 </li>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <tr>
                                             <td class="p-0">
                                                 <li>
@@ -119,11 +126,11 @@
                                                         Baby Toy</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">Outdoor Toy</a>
                                                 </li>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
@@ -226,13 +233,13 @@
                 <li><a href="toys-games.html#v-pills-home">Educational Toy</a> </li>
                 <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings0">Board Game</a></li>
-                <li><a href="all_product.html">Musical Toy</a></li>
+                <!-- <li><a href="all_product.html">Musical Toy</a></li> -->
                 <li><a href="all_product.html">Puzzle Game</a></li>
-                <li><a href="all_product.html">Building Blocks</a></li>
+                <!-- <li><a href="all_product.html">Building Blocks</a></li> -->
                 <li><a href="toys-games.html#v-pills-settings6">Sports Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings7">Creative Toy</a></li>
                 <li><a href="all_product.html">Baby Toy</a></li>
-                <li><a href="all_product.html">Outdoor Toy</a></li>
+                <!-- <li><a href="all_product.html">Outdoor Toy</a></li> -->
             </ul>
         </div>
     </div>
@@ -268,8 +275,9 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <p class="mt-5">Welcome to <strong>Shipra Play House</strong>, your ultimate destination for
+                <div class="col-md-12 mt-5">
+                    <h1 class="fs-3 fw-bold">Welcome to Shipra Play House – Your Kids' Favorite Toy Store!</h1>
+                    <p>Welcome to <strong>Shipra Play House</strong>, your ultimate destination for
                         premium-quality toys, educational tools, home essentials, and much more. We take pride in
                         offering a wide range of thoughtfully curated products designed to bring joy, learning, and
                         convenience to every home. Whether you're looking for engaging <a href="toys-games.html">Toys &
@@ -285,12 +293,10 @@
                         ones.</p>
                     <p>At Shipra, we believe that quality should never come at the cost of affordability. That’s why
                         we’re committed to offering products that are both durable and budget-friendly. With a focus on
-                        excellent customer service, secure payments, and timely delivery, we aim to make your shopping
+                        excellent customer service, secure payments, and timely delivery, we aim to make your shoopping 
                         experience smooth and enjoyable.</p>
                     <p>Discover the perfect blend of fun, learning, and practicality—only at <strong>Shipra Play
                             House</strong>. Shop now and bring happiness home!</p>
-                    <p>Canonical Tag :- <a href="https://shipraplayhouse.com/index.html">
-                            https://shipraplayhouse.com/index.html/” </a></p>
                 </div>
             </div>
         </div>
@@ -742,7 +748,7 @@
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience and affordability.
+                        a seamless shoopping  experience and affordability.
                     </p>
                 </div>
                 <div class="col-lg-4 ms-auto col-md-5">
@@ -762,7 +768,7 @@
 
                                     <li><a href="toys-games.html#v-pills-settings0"> Board Game</a></li>
 
-                                    <li> <a href="all_product.html">Musical Toy</a> </li>
+                                    <!-- <li> <a href="all_product.html">Musical Toy</a> </li> -->
 
                                     <li> <a href="all_product.html"> Puzzle Game </a> </li>
 
@@ -771,7 +777,7 @@
                         </div>
                         <div class="col-md-5 pt-3  col-6">
                             <ul class="list-unstyled">
-                                <li> <a href="all_product.html"> Building Blocks </a> </li>
+                                <!-- <li> <a href="all_product.html"> Building Blocks </a> </li> -->
 
                                 <li><a href="toys-games.html#v-pills-settings6"> Sports Toy </a> </li>
 
@@ -779,7 +785,7 @@
 
                                 <li> <a href="all_product.html"> Baby Toy</a></li>
 
-                                <li> <a href="all_product.html">Outdoor Toy</a> </li>
+                                <!-- <li> <a href="all_product.html">Outdoor Toy</a> </li> -->
                             </ul>
                         </div>
                     </div>
@@ -842,11 +848,11 @@
                 </div>
                 <div class="col-auto">
 
-                    <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                    <i class="text-center text-light"><b>This website is owned and operated by ShooppingCrafts</b></i>
                 </div>
                 <div class="col-auto">
 
-                    <a href="shipping_delivery.html">Shipping & Delivery Policy</a>
+                    <a href="shipping_delivery.html">Shoopping & Delivery Policy</a>
                 </div>
                 <div class="col-auto">
 
