--- a/pyramid_cube.html
+++ b/pyramid_cube.html
@@ -353,7 +353,7 @@
                                 <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
                                 CONNECT US</a>
                             <a href="#" class="button" id="buy-now">
-                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                <span class="h5"><i class="fa-solid fa-cart-Shoopping"></i> </span>
                                 BUY NOW</a>
                         </div>
                     </div>
@@ -364,7 +364,7 @@
     </section>
     <!-- montessori_learning end -->
 
-    <!-- footer start -->
+     <!-- footer start -->
     <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
@@ -376,7 +376,7 @@
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience and affordability.
+                        a seamless Shoopping experience and affordability.
                     </p>
                 </div>
                 <div class="col-lg-4 ms-auto col-md-5">
@@ -396,7 +396,7 @@
 
                                     <li><a href="toys-games.html#v-pills-settings0"> Board Game</a></li>
 
-                                    <li> <a href="all_product.html">Musical Toy</a> </li>
+                                    <!-- <li> <a href="all_product.html">Musical Toy</a> </li> -->
 
                                     <li> <a href="all_product.html"> Puzzle Game </a> </li>
 
@@ -405,7 +405,7 @@
                         </div>
                         <div class="col-md-5 pt-3  col-6">
                             <ul class="list-unstyled">
-                                <li> <a href="all_product.html"> Building Blocks </a> </li>
+                                <!-- <li> <a href="all_product.html"> Building Blocks </a> </li> -->
 
                                 <li><a href="toys-games.html#v-pills-settings6"> Sports Toy </a> </li>
 
@@ -413,7 +413,7 @@
 
                                 <li> <a href="all_product.html"> Baby Toy</a></li>
 
-                                <li> <a href="all_product.html">Outdoor Toy</a> </li>
+                                <!-- <li> <a href="all_product.html">Outdoor Toy</a> </li> -->
                             </ul>
                         </div>
                     </div>
@@ -476,11 +476,11 @@
                 </div>
                 <div class="col-auto">
 
-                    <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                    <i class="text-center text-light"><b>This website is owned and operated by ShooppingCrafts</b></i>
                 </div>
                 <div class="col-auto">
 
-                    <a href="shipping_delivery.html">Shipping & Delivery Policy</a>
+                    <a href="shipping_delivery.html">Shoopping & Delivery Policy</a>
                 </div>
                 <div class="col-auto">
 
