--- a/shipping_delivery.html
+++ b/shipping_delivery.html
@@ -34,8 +34,8 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                            loading="lazy" class="img-fluid"></a>
+                    <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                            alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
                     <ul class="nav">
@@ -76,17 +76,18 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="all_product.html">Musical Toy</a>
-                                                </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
-                                                <li>
                                                     <a class="dropdown-item" href="all_product.html">
                                                         Puzzle Game </a>
                                                 </li>
                                             </td>
+                                            <!-- <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="all_product.html">Musical Toy</a>
+                                                </li>
+                                            </td> -->
+                                        </tr>
+                                        <!-- <tr>
+                                        
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
@@ -94,7 +95,7 @@
                                                     </a>
                                                 </li>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <tr>
                                             <td class="p-0">
                                                 <li>
@@ -117,11 +118,11 @@
                                                         Baby Toy</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">Outdoor Toy</a>
                                                 </li>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
@@ -178,8 +179,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                        loading="lazy" class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                        alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -204,8 +205,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                        loading="lazy" class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                        alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
@@ -224,13 +225,13 @@
                 <li><a href="toys-games.html#v-pills-home">Educational Toy</a> </li>
                 <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings0">Board Game</a></li>
-                <li><a href="all_product.html">Musical Toy</a></li>
+                <!-- <li><a href="all_product.html">Musical Toy</a></li> -->
                 <li><a href="all_product.html">Puzzle Game</a></li>
-                <li><a href="all_product.html">Building Blocks</a></li>
+                <!-- <li><a href="all_product.html">Building Blocks</a></li> -->
                 <li><a href="toys-games.html#v-pills-settings6">Sports Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings7">Creative Toy</a></li>
                 <li><a href="all_product.html">Baby Toy</a></li>
-                <li><a href="all_product.html">Outdoor Toy</a></li>
+                <!-- <li><a href="all_product.html">Outdoor Toy</a></li> -->
             </ul>
         </div>
     </div>
@@ -262,7 +263,7 @@
                     <i><span>Note: Delays may occur due to weather, festivals, or unforeseen courier issues.</span></i>
                     <p class="pt-3"><b>4. Shipping Charges</b></p>
                     <ul>
-                        <li><b>Free Shipping</b> on all orders above ₹[Insert threshold, e.g., ₹999].</li>
+                        <li><b>Free Shipping</b> on all orders .</li>
                         <li>• Orders below the threshold may include a nominal shipping charge, visible at checkout.
                         </li>
                     </ul>
@@ -310,12 +311,13 @@
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                                loading="lazy" class="img-fluid pb-4"></a>
+                        <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png"
+                                style="max-width: 150px;" alt="Shipra Play House Logo" loading="lazy"
+                                class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience and affordability.
+                        a seamless shoopping  experience and affordability.
                     </p>
                 </div>
                 <div class="col-lg-4 ms-auto col-md-5">
@@ -335,7 +337,7 @@
 
                                     <li><a href="toys-games.html#v-pills-settings0"> Board Game</a></li>
 
-                                    <li> <a href="all_product.html">Musical Toy</a> </li>
+                                    <!-- <li> <a href="all_product.html">Musical Toy</a> </li> -->
 
                                     <li> <a href="all_product.html"> Puzzle Game </a> </li>
 
@@ -344,7 +346,7 @@
                         </div>
                         <div class="col-md-5 pt-3  col-6">
                             <ul class="list-unstyled">
-                                <li> <a href="all_product.html"> Building Blocks </a> </li>
+                                <!-- <li> <a href="all_product.html"> Building Blocks </a> </li> -->
 
                                 <li><a href="toys-games.html#v-pills-settings6"> Sports Toy </a> </li>
 
@@ -352,7 +354,7 @@
 
                                 <li> <a href="all_product.html"> Baby Toy</a></li>
 
-                                <li> <a href="all_product.html">Outdoor Toy</a> </li>
+                                <!-- <li> <a href="all_product.html">Outdoor Toy</a> </li> -->
                             </ul>
                         </div>
                     </div>
@@ -415,11 +417,11 @@
                 </div>
                 <div class="col-auto">
 
-                    <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                    <i class="text-center text-light"><b>This website is owned and operated by ShooppingCrafts</b></i>
                 </div>
                 <div class="col-auto">
 
-                    <a href="shipping_delivery.html">Shipping & Delivery Policy</a>
+                    <a href="shipping_delivery.html">Shoopping & Delivery Policy</a>
                 </div>
                 <div class="col-auto">
 
