--- a/air_plan.html
+++ b/air_plan.html
@@ -74,19 +74,20 @@
                                                         Board Game</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">Musical Toy</a>
                                                 </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
+                                            </td> -->
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
                                                         Puzzle Game </a>
                                                 </li>
                                             </td>
+                                        </tr>
+                                        <!-- <tr>
+                                           
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
@@ -94,7 +95,7 @@
                                                     </a>
                                                 </li>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <tr>
                                             <td class="p-0">
                                                 <li>
@@ -117,11 +118,11 @@
                                                         Baby Toy</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">Outdoor Toy</a>
                                                 </li>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
@@ -224,13 +225,13 @@
                 <li><a href="toys-games.html#v-pills-home">Educational Toy</a> </li>
                 <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings0">Board Game</a></li>
-                <li><a href="all_product.html">Musical Toy</a></li>
+                <!-- <li><a href="all_product.html">Musical Toy</a></li> -->
                 <li><a href="all_product.html">Puzzle Game</a></li>
-                <li><a href="all_product.html">Building Blocks</a></li>
+                <!-- <li><a href="all_product.html">Building Blocks</a></li> -->
                 <li><a href="toys-games.html#v-pills-settings6">Sports Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings7">Creative Toy</a></li>
                 <li><a href="all_product.html">Baby Toy</a></li>
-                <li><a href="all_product.html">Outdoor Toy</a></li>
+                <!-- <li><a href="all_product.html">Outdoor Toy</a></li> -->
             </ul>
         </div>
     </div>
@@ -315,7 +316,7 @@
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience and affordability.
+                        a seamless shoopping experience and affordability.
                     </p>
                 </div>
                 <div class="col-lg-4 ms-auto col-md-5">
@@ -335,7 +336,7 @@
 
                                     <li><a href="toys-games.html#v-pills-settings0"> Board Game</a></li>
 
-                                    <li> <a href="all_product.html">Musical Toy</a> </li>
+                                    <!-- <li> <a href="all_product.html">Musical Toy</a> </li> -->
 
                                     <li> <a href="all_product.html"> Puzzle Game </a> </li>
 
@@ -344,7 +345,7 @@
                         </div>
                         <div class="col-md-5 pt-3  col-6">
                             <ul class="list-unstyled">
-                                <li> <a href="all_product.html"> Building Blocks </a> </li>
+                                <!-- <li> <a href="all_product.html"> Building Blocks </a> </li> -->
 
                                 <li><a href="toys-games.html#v-pills-settings6"> Sports Toy </a> </li>
 
@@ -352,7 +353,7 @@
 
                                 <li> <a href="all_product.html"> Baby Toy</a></li>
 
-                                <li> <a href="all_product.html">Outdoor Toy</a> </li>
+                                <!-- <li> <a href="all_product.html">Outdoor Toy</a> </li> -->
                             </ul>
                         </div>
                     </div>
@@ -415,11 +416,11 @@
                 </div>
                 <div class="col-auto">
 
-                    <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                    <i class="text-center text-light"><b>This website is owned and operated by ShooppingCrafts</b></i>
                 </div>
                 <div class="col-auto">
 
-                    <a href="shipping_delivery.html">Shipping & Delivery Policy</a>
+                    <a href="shipping_delivery.html">Shoopping & Delivery Policy</a>
                 </div>
                 <div class="col-auto">
 
