--- a/birthday_gifts.html
+++ b/birthday_gifts.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-      <!-- Header start -->
+    <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -34,8 +34,8 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                            loading="lazy" class="img-fluid"></a>
+                    <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                            alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
                     <ul class="nav">
@@ -74,20 +74,20 @@
                                                         Board Game</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Musical Toy</a>
-                                                </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
+                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
                                                         Puzzle Game </a>
                                                 </li>
                                             </td>
+                                            <!-- <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="all_product.html">Musical Toy</a>
+                                                </li>
+                                            </td> -->
+                                        </tr>
+                                        <!-- <tr>
+                                           
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
@@ -95,7 +95,7 @@
                                                     </a>
                                                 </li>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <tr>
                                             <td class="p-0">
                                                 <li>
@@ -118,12 +118,11 @@
                                                         Baby Toy</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item"
-                                                        href="all_product.html">Outdoor Toy</a>
+                                                    <a class="dropdown-item" href="all_product.html">Outdoor Toy</a>
                                                 </li>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
@@ -180,8 +179,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                        loading="lazy" class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                        alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -206,8 +205,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                        loading="lazy" class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                        alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
@@ -226,13 +225,13 @@
                 <li><a href="toys-games.html#v-pills-home">Educational Toy</a> </li>
                 <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings0">Board Game</a></li>
-                <li><a href="all_product.html">Musical Toy</a></li>
+                <!-- <li><a href="all_product.html">Musical Toy</a></li> -->
                 <li><a href="all_product.html">Puzzle Game</a></li>
-                <li><a href="all_product.html">Building Blocks</a></li>
+                <!-- <li><a href="all_product.html">Building Blocks</a></li> -->
                 <li><a href="toys-games.html#v-pills-settings6">Sports Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings7">Creative Toy</a></li>
                 <li><a href="all_product.html">Baby Toy</a></li>
-                <li><a href="all_product.html">Outdoor Toy</a></li>
+                <!-- <li><a href="all_product.html">Outdoor Toy</a></li> -->
             </ul>
         </div>
     </div>
@@ -246,7 +245,8 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/60843.webp" alt="#" class="img-fluid" loading="lazy"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/60843.webp" alt="#" class="img-fluid"
+                                    loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -271,7 +271,8 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/bottal.jpg" alt="#" class="img-fluid" loading="lazy"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/bottal.jpg" alt="#" class="img-fluid"
+                                    loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -317,8 +318,8 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/personalized-happy-birthday.jpg" alt="#" loading="lazy"
-                                    class="img-fluid"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/personalized-happy-birthday.jpg" alt="#"
+                                    loading="lazy" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -330,7 +331,8 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/jacket.jpg" alt="#" class="img-fluid" loading="lazy"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/jacket.jpg" alt="#" class="img-fluid"
+                                    loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -342,7 +344,8 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/cap.webp" alt="#" class="img-fluid" loading="lazy"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/cap.webp" alt="#" class="img-fluid"
+                                    loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -362,7 +365,8 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/bag.jpg" alt="#" class="img-fluid" loading="lazy"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/bag.jpg" alt="#" class="img-fluid"
+                                    loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -374,8 +378,8 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/chocolate1.jpg" alt="#"
-                                    class="img-fluid" loading="lazy"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/chocolate1.jpg" alt="#" class="img-fluid"
+                                    loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -387,7 +391,8 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/mug1.jpeg" alt="#" class="img-fluid" loading="lazy"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/mug1.jpeg" alt="#" class="img-fluid"
+                                    loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -399,8 +404,8 @@
                 <div class="col d-flex mb-3">
                     <div class="jk-banner-item-warpper1">
                         <div class="jk_bnr_prd_img1 ">
-                            <a href="#"><img src="./assets/img/birthday_gifts/bottal1.webp" alt="#"
-                                    class="img-fluid" loading="lazy"></a>
+                            <a href="#"><img src="./assets/img/birthday_gifts/bottal1.webp" alt="#" class="img-fluid"
+                                    loading="lazy"></a>
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
@@ -426,7 +431,8 @@
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="staticBackdropLabel">
                         <a href="index.html">
-                            <img src="./assets/img/Shipra Play House Logo.png" width="150px" alt="Shipra Play House Logo" class="img-fluid" loading="lazy">
+                            <img src="./assets/img/Shipra Play House Logo.png" width="150px"
+                                alt="Shipra Play House Logo" class="img-fluid" loading="lazy">
                         </a>
                     </h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -444,18 +450,19 @@
     <!-- form -->
     <!-- Birthday end -->
 
-        <!-- footer start -->
+    <!-- footer start -->
     <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                                loading="lazy" class="img-fluid pb-4"></a>
+                        <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png"
+                                style="max-width: 150px;" alt="Shipra Play House Logo" loading="lazy"
+                                class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience and affordability.
+                        a seamless shoopping experience and affordability.
                     </p>
                 </div>
                 <div class="col-lg-4 ms-auto col-md-5">
@@ -475,7 +482,7 @@
 
                                     <li><a href="toys-games.html#v-pills-settings0"> Board Game</a></li>
 
-                                    <li> <a href="all_product.html">Musical Toy</a> </li>
+                                    <!-- <li> <a href="all_product.html">Musical Toy</a> </li> -->
 
                                     <li> <a href="all_product.html"> Puzzle Game </a> </li>
 
@@ -484,7 +491,7 @@
                         </div>
                         <div class="col-md-5 pt-3  col-6">
                             <ul class="list-unstyled">
-                                <li> <a href="all_product.html"> Building Blocks </a> </li>
+                                <!-- <li> <a href="all_product.html"> Building Blocks </a> </li> -->
 
                                 <li><a href="toys-games.html#v-pills-settings6"> Sports Toy </a> </li>
 
@@ -492,7 +499,7 @@
 
                                 <li> <a href="all_product.html"> Baby Toy</a></li>
 
-                                <li> <a href="all_product.html">Outdoor Toy</a> </li>
+                                <!-- <li> <a href="all_product.html">Outdoor Toy</a> </li> -->
                             </ul>
                         </div>
                     </div>
@@ -555,11 +562,11 @@
                 </div>
                 <div class="col-auto">
 
-                    <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                    <i class="text-center text-light"><b>This website is owned and operated by ShooppingCrafts</b></i>
                 </div>
                 <div class="col-auto">
 
-                    <a href="shipping_delivery.html">Shipping & Delivery Policy</a>
+                    <a href="shipping_delivery.html">Shoopping & Delivery Policy</a>
                 </div>
                 <div class="col-auto">
 
