--- a/cancellation.html
+++ b/cancellation.html
@@ -34,8 +34,8 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                            loading="lazy" class="img-fluid"></a>
+                    <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                            alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
                     <ul class="nav">
@@ -74,19 +74,20 @@
                                                         Board Game</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">Musical Toy</a>
                                                 </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
+                                            </td> -->
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
                                                         Puzzle Game </a>
                                                 </li>
                                             </td>
+                                        </tr>
+                                        <!-- <tr>
+
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
@@ -94,7 +95,7 @@
                                                     </a>
                                                 </li>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <tr>
                                             <td class="p-0">
                                                 <li>
@@ -117,11 +118,11 @@
                                                         Baby Toy</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">Outdoor Toy</a>
                                                 </li>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
@@ -178,8 +179,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                        loading="lazy" class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                        alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -204,8 +205,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                        loading="lazy" class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                        alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
@@ -224,13 +225,13 @@
                 <li><a href="toys-games.html#v-pills-home">Educational Toy</a> </li>
                 <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings0">Board Game</a></li>
-                <li><a href="all_product.html">Musical Toy</a></li>
+                <!-- <li><a href="all_product.html">Musical Toy</a></li> -->
                 <li><a href="all_product.html">Puzzle Game</a></li>
-                <li><a href="all_product.html">Building Blocks</a></li>
+                <!-- <li><a href="all_product.html">Building Blocks</a></li> -->
                 <li><a href="toys-games.html#v-pills-settings6">Sports Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings7">Creative Toy</a></li>
                 <li><a href="all_product.html">Baby Toy</a></li>
-                <li><a href="all_product.html">Outdoor Toy</a></li>
+                <!-- <li><a href="all_product.html">Outdoor Toy</a></li> -->
             </ul>
         </div>
     </div>
@@ -241,14 +242,17 @@
             <div class="row">
                 <div class="col-md-12 pt-5">
                     <p><b>Cancellation & Refund Policy</b></p>
-                    <i>At <b><a href="www.shipraplayhouse.com">www.shipraplayhouse.com</a></b> your satisfaction is our priority. We aim to make your shopping
+                    <i>At <b><a href="www.shipraplayhouse.com">www.shipraplayhouse.com</a></b> your satisfaction is our
+                        priority. We aim to make your shoopping
                         experience smooth and worry-free. Please read our Cancellation and Refund Policy carefully
                         before making a purchase.</i>
                     <p class="pt-3"><b>1. Order Cancellation</b></p>
                     <i><b>• Before Shipping:</b></i>
                     <i>You may cancel your order within <b>12 hours</b> of placing it, or <b>before it has been
                             shipped</b>.</i><br>
-                    <i class="px-2">To request cancellation, please contact us at [Your Email] or [Phone Number] with
+                    <i class="px-2">To request cancellation, please contact us at Your Email- <a
+                            href="mailto:care@shipraplayhouse.com">care@shipraplayhouse.com </a> or Phone Number- <a
+                            href="tel:9579613569 "> 9579613569 </a> with
                         your order
                         number.</i><br>
                     <i><b>• After Shipping:</b></i><br>
@@ -261,7 +265,8 @@
                         <li>You notify us within <b>48 hours</b> of receiving the product.</li>
                         <li>The product is <b>unused</b> and in <b>original packaging</b> with all tags intact.</li>
                     </ul>
-                    <i>To initiate a return, email us at [Your Email] with the following:</i>
+                    <i>To initiate a return, email us at Your Email- <a
+                            href="mailto:care@shipraplayhouse.com">care@shipraplayhouse.com </a> with the following:</i>
                     <ul>
                         <li>Order ID</li>
                         <li>Reason for return</li>
@@ -273,16 +278,19 @@
                         <li>Customized or personalized products</li>
                         <li>Items returned without original packaging</li>
                         <li>Requests made after the return period (usually <b>7 days</b> from delivery)</li>
-                    </ul> 
+                    </ul>
                     <p><b>4. Refund Process</b></p>
                     <ul>
-                        <li>After we receive and inspect the returned item, we will notify you of the refund status.</li>
-                        <li>If approved, your refund will be processed within <b>5-7 business days</b> to your original payment method.</li>
+                        <li>After we receive and inspect the returned item, we will notify you of the refund status.
+                        </li>
+                        <li>If approved, your refund will be Credited within <b>5-7 business days</b> to your original
+                            payment method.</li>
                         <li>Shipping charges (if any) are non-refundable unless the return is due to our error.</li>
                     </ul>
                     <p class="pt-3"><b>5. Exchange Policy</b></p>
                     <ul>
-                        <li>We currently do not offer direct exchanges. If you need a different item, please return the original product and place a new order separately.</li>
+                        <li>We currently do not offer direct exchanges. If you need a different item, please return the
+                            original product and place a new order separately.</li>
                     </ul>
                     <p class="pt-3"><b>6. Contact Us</b></p>
                     <i>For questions or help with your order, please contact our support team:</i>
@@ -303,12 +311,13 @@
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                                loading="lazy" class="img-fluid pb-4"></a>
+                        <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png"
+                                style="max-width: 150px;" alt="Shipra Play House Logo" loading="lazy"
+                                class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience and affordability.
+                        a seamless shoopping experience and affordability.
                     </p>
                 </div>
                 <div class="col-lg-4 ms-auto col-md-5">
@@ -328,7 +337,7 @@
 
                                     <li><a href="toys-games.html#v-pills-settings0"> Board Game</a></li>
 
-                                    <li> <a href="all_product.html">Musical Toy</a> </li>
+                                    <!-- <li> <a href="all_product.html">Musical Toy</a> </li> -->
 
                                     <li> <a href="all_product.html"> Puzzle Game </a> </li>
 
@@ -337,7 +346,7 @@
                         </div>
                         <div class="col-md-5 pt-3  col-6">
                             <ul class="list-unstyled">
-                                <li> <a href="all_product.html"> Building Blocks </a> </li>
+                                <!-- <li> <a href="all_product.html"> Building Blocks </a> </li> -->
 
                                 <li><a href="toys-games.html#v-pills-settings6"> Sports Toy </a> </li>
 
@@ -345,7 +354,7 @@
 
                                 <li> <a href="all_product.html"> Baby Toy</a></li>
 
-                                <li> <a href="all_product.html">Outdoor Toy</a> </li>
+                                <!-- <li> <a href="all_product.html">Outdoor Toy</a> </li> -->
                             </ul>
                         </div>
                     </div>
@@ -408,11 +417,11 @@
                 </div>
                 <div class="col-auto">
 
-                    <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                    <i class="text-center text-light"><b>This website is owned and operated by ShooppingCrafts </b></i>
                 </div>
                 <div class="col-auto">
 
-                    <a href="shipping_delivery.html">Shipping & Delivery Policy</a>
+                    <a href="shipping_delivery.html">Shoopping & Delivery Policy</a>
                 </div>
                 <div class="col-auto">
 
