--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -281,7 +281,7 @@
                     <p class="pt-3"><b>6. Cookies and Tracking</b></p>
                     <i>We use cookies to:</i>
                     <ul>
-                        <li>Enhance your shopping experience</li>
+                        <li>Enhance your Shoopping experience</li>
                         <li>Remember your cart and preferences</li>
                         <li>Analyze website traffic</li>
                     </ul>
@@ -312,18 +312,19 @@
     <!-- Privacy Policy end -->
 
 
-    <!-- footer start -->
+     <!-- footer start -->
     <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
                 <div class="col-md-3 pt-4">
                     <div class="row text-md-center">
-                        <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                                loading="lazy" class="img-fluid pb-4"></a>
+                        <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png"
+                                style="max-width: 150px;" alt="Shipra Play House Logo" loading="lazy"
+                                class="img-fluid pb-4"></a>
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience and affordability.
+                        a seamless Shoopping experience and affordability.
                     </p>
                 </div>
                 <div class="col-lg-4 ms-auto col-md-5">
@@ -343,7 +344,7 @@
 
                                     <li><a href="toys-games.html#v-pills-settings0"> Board Game</a></li>
 
-                                    <li> <a href="all_product.html">Musical Toy</a> </li>
+                                    <!-- <li> <a href="all_product.html">Musical Toy</a> </li> -->
 
                                     <li> <a href="all_product.html"> Puzzle Game </a> </li>
 
@@ -352,7 +353,7 @@
                         </div>
                         <div class="col-md-5 pt-3  col-6">
                             <ul class="list-unstyled">
-                                <li> <a href="all_product.html"> Building Blocks </a> </li>
+                                <!-- <li> <a href="all_product.html"> Building Blocks </a> </li> -->
 
                                 <li><a href="toys-games.html#v-pills-settings6"> Sports Toy </a> </li>
 
@@ -360,7 +361,7 @@
 
                                 <li> <a href="all_product.html"> Baby Toy</a></li>
 
-                                <li> <a href="all_product.html">Outdoor Toy</a> </li>
+                                <!-- <li> <a href="all_product.html">Outdoor Toy</a> </li> -->
                             </ul>
                         </div>
                     </div>
@@ -423,11 +424,11 @@
                 </div>
                 <div class="col-auto">
 
-                    <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                    <i class="text-center text-light"><b>This website is owned and operated by ShooppingCrafts</b></i>
                 </div>
                 <div class="col-auto">
 
-                    <a href="shipping_delivery.html">Shipping & Delivery Policy</a>
+                    <a href="shipping_delivery.html">Shoopping & Delivery Policy</a>
                 </div>
                 <div class="col-auto">
 
