--- a/triggle_chess.html
+++ b/triggle_chess.html
@@ -352,7 +352,7 @@
                                 <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
                                 CONNECT US</a>
                             <a href="#" class="button" id="buy-now">
-                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                <span class="h5"><i class="fa-solid fa-cart-Shoopping"></i> </span>
                                 BUY NOW</a>
                         </div>
                     </div>
@@ -377,7 +377,7 @@
                     </div>
                     <p class="text-light">Shipra is your one-stop destination for high-quality products across
                         categories like toys, home essentials, educational tools, and more. We are committed to offering
-                        a seamless shopping experience and affordability.
+                        a seamless Shoopping experience and affordability.
                     </p>
                 </div>
                 <div class="col-lg-4 ms-auto col-md-5">
@@ -397,7 +397,7 @@
 
                                     <li><a href="toys-games.html#v-pills-settings0"> Board Game</a></li>
 
-                                    <li> <a href="all_product.html">Musical Toy</a> </li>
+                                    <!-- <li> <a href="all_product.html">Musical Toy</a> </li> -->
 
                                     <li> <a href="all_product.html"> Puzzle Game </a> </li>
 
@@ -406,7 +406,7 @@
                         </div>
                         <div class="col-md-5 pt-3  col-6">
                             <ul class="list-unstyled">
-                                <li> <a href="all_product.html"> Building Blocks </a> </li>
+                                <!-- <li> <a href="all_product.html"> Building Blocks </a> </li> -->
 
                                 <li><a href="toys-games.html#v-pills-settings6"> Sports Toy </a> </li>
 
@@ -414,7 +414,7 @@
 
                                 <li> <a href="all_product.html"> Baby Toy</a></li>
 
-                                <li> <a href="all_product.html">Outdoor Toy</a> </li>
+                                <!-- <li> <a href="all_product.html">Outdoor Toy</a> </li> -->
                             </ul>
                         </div>
                     </div>
@@ -477,11 +477,11 @@
                 </div>
                 <div class="col-auto">
 
-                    <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
+                    <i class="text-center text-light"><b>This website is owned and operated by ShooppingCrafts</b></i>
                 </div>
                 <div class="col-auto">
 
-                    <a href="shipping_delivery.html">Shipping & Delivery Policy</a>
+                    <a href="shipping_delivery.html">Shoopping & Delivery Policy</a>
                 </div>
                 <div class="col-auto">
 
